# gpui-lucide

./: AGENTS.md  Cargo.toml  README.md  renovate.json
.github/workflows/: ci.yml
crates/gpui-lucide/: Cargo.toml  build.rs
crates/gpui-lucide/src/: icon.rs  lib.rs
crates/playground/: Cargo.toml
crates/playground/src/: main.rs  search_input.rs
scripts/: download-icons.sh
