[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
description = "Lucide icons for GPUI."
edition = "2024"
license = "MIT"
repository = "https://github.com/joris-gallot/gpui-lucide"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
  "font-kit",
] }
core-text = "=21.0.0"
